# ParcialFinal

./: Parcial3.ipynb  README.md
Breast_Cancer_Prediction/: CMakeLists.txt  main.cpp
Breast_Cancer_Prediction/ClassExtraction/: extractiondata.cpp  extractiondata.h
Breast_Cancer_Prediction/Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Breast_Cancer_Prediction/Regression/: linearregression.cpp  linearregression.h
ParcialFinal/: CMakeLists.txt  main.cpp
ParcialFinal/Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
